# autolib

./: .gitignore  INSTALL  Makefile  build.sh  forauto  pack.sh  package-versions.bump
algorithm/: autolib-algorithm.cabal
algorithm/Autolib/: Fix.hs  Schichten.hs
cgi/: Menu_Test.hs  autolib-cgi.cabal
cgi/Autolib/: CGI.hs
cgi/Autolib/CGI/: Collection.hs  Container.hs  Edit.hs  Form.hs  Local.hs  Store.hs  Widget.hs
data/: autolib-data.cabal
data/Autolib/: FiniteMap.hs  FiniteMap.lhs.notused  Set.hs  Set.lhs.notused  Simple_Set.hs
data/Autolib/Data/: Map.hs
derive/: README  autolib-derive.cabal  generate
derive/Data/Derive/: All.hs  JSON.hs  Reader.hs  ToDoc.hs  ToTransport.hs
derive/Data/Derive/Util/: Missing.hs
derive/examples/: Test.hs  TestJSON.hs  TestOld.hs  TestOld.hs.drift  TestToTransport.hs
dot/: Setup.lhs  autolib-dot.cabal
dot/Autolib/: Boxing.hs  Dot.hs  Local.hs.in
dot/Autolib/Boxing/: Class.hs  Ops.hs  Position.hs
dot/Autolib/Dot/: Attribute.hs  Dot.hs  Dotty.hs  Edge.hs  Graph.hs  Node.hs  Parsec.hs  Type.hs
exp/: autolib-exp.cabal
exp/Autolib/: Exp.hs
exp/Autolib/Exp/: Einfach.hs  Env.hs  Example.hs  Generated.hs  Inter.hs  Loop.hs  Loop.input  Makefile  MyTokens.hs  Print.hs  Read.hs  Reverse.hs  Sanity.hs  Simplify.hs  Some.hs  Statement.hs  StatementType.hs  Syntax.hs  Type.hs  Type.hs.drift  Vergleiche.hs
exp/Autolib/NFA/: Compact.hs  Language.hs
fa/: autolib-fa.cabal
fa/Autolib/: ENFA.hs  NFA.hs
fa/Autolib/ENFA/: Data.hs  Data.hs.drift  Dot.hs  Link.hs  Op.hs  Path.hs  Reach.hs  Uneps.hs
fa/Autolib/NFA/: Basic.hs  Check.hs  Contract.hs  Data.hs  Data.hs.drift  Det.hs  Dot.hs  Epsilon.hs  Eq.hs  Equiv.hs  Example.hs  Factors.hs  Finite.hs  Hull.hs  Interface.hs  Link.hs  Minimize.hs  Minus.hs  Mirror.hs  Normalize.hs  Ops.hs  Quotient.hs  Restrict.hs  Shortest.hs  Shrink.hs  Shuffle.hs  Some.hs  Step.hs  Subseteq.hs  Trim.hs  Type.hs
foa/: autolib-foa.cabal
foa/Autolib/FOA/: Bisimulation.hs  Data.hs  Inter.hs  Muller2Buchi.hs  Op.hs  Prop.hs  Safra.hs
foa/Autolib/LTL/: Assign.hs  Data.hs  Eval.hs  LocalEventual.hs  Parse.hs  Print.hs  Type.hs
foa/Autolib/LTL/Eval/: ORW.hs
foa/Autolib/ORW/: Data.hs  Print.hs  Read.hs  Type.hs
fta/: autolib-fta.cabal
fta/Autolib/: NFTA.hs
fta/Autolib/NFTA/: Basic.hs  Compact.hs  Complement.hs  Cross.hs  Det.hs  Dot.hs  Epsilon.hs  Insert.hs  Normalize.hs  Ops.hs  Path.hs  Shortest.hs  Trim.hs  Type.hs  Type.hs.drift
fta/Autolib/Rewriting/: Automaton.hs
genetic/: autolib-genetic.cabal
genetic/Autolib/: Genetic.hs
genetic/Autolib/Genetic/: Central.hs  Config.hs  Operator.hs  Parallel.hs
graph/: autolib-graph.cabal
graph/Autolib/: Graph.hs  Iso.hs  Number.hs
graph/Autolib/Dot/: Arrange.hs
graph/Autolib/GVKnoten/: GVKnoten.hs  InstanzTrans.hs  Layout.hs  Main.hs  Parser.hs  Testgraph.hs  Type.hs
graph/Autolib/Graph/: Adj.hs  Basic.hs  Beispiele.hs  Brinkmann.hs  CLQ12-Solve.hs  Clique.hs  Clique_Solve.hs  Color.hs  Display.hs  Gallery.hs  Generate.hs  Graph.hs  Graph_Clique.hs  Graph_Clique_Solve.hs  Graph_Color.hs  Graph_Hamilton.hs  Graph_Hamilton_Solve.hs  Graph_Joe.hs  HAM12-Solve.hs  Hamilton.hs  Hamilton_Solve.hs  Incidence.hs  Isomorph.hs  Joe.hs  Kante.hs  Kante.hs.drift  Kneser.hs  Knight.hs  Labeling.hs  Layout.hs  Line.hs  Myceilski.hs  Mycielski.hs  Ops.hs  Quiz.hs  SpanTree.hs  Standard.hs  Type.hs  Util.hs  Util.hs.old.2  (+8 more)
graph/Autolib/Graph/Reading/: Type.hs  Type.hs.drift
lib/: autolib.cabal
output/: autolib-output.cabal
output/Autolib/: Output.hs
output/Autolib/Output/: Basic.hs  Html.hs  Type.hs  Wash.hs  XHtml.hs
reader/: autolib-reader.cabal
reader/Autolib/: Reader.hs
reader/Autolib/Reader/: Basic.hs  Class.hs  Derived.hs  Derived.hs.drift  Instances.hs  Link.hs
relation/: autolib-relation.cabal
relation/Autolib/: Partial.hs  Relation.hs
relation/Autolib/Relation/: Basic.hs  Iso.hs  Ops.hs  Type.hs
reporter/: autolib-reporter.cabal
reporter/Autolib/: Reporter.hs  Timer.hs
reporter/Autolib/Reporter/: Bool.hs  Boolean.hs  Checker.hs  DB.hs  IOStream.hs  Iterator.hs  Parallel.hs  Proof.hs  Proof.hs.drift  Result.hs  Set.hs  Stream.hs  Subset.hs  Type.hs  Wash.hs  Washer.hs
reporter/Autolib/Reporter/Boolean/: Data.hs  Eval.hs  Reader.hs  ToDoc.hs  Type.hs
reporter/Autolib/Reporter/Classic/: Type.hs
reporter/Autolib/Reporter/IO/: Type.hs
rewriting/: autolib-rewriting.cabal
rewriting/Autolib/: Choose.hs  Pick.hs  Rewriting.hs  SRS.hs  TES.hs  Virtualist.hs
rewriting/Autolib/Rewriting/: Address.hs  Path.hs  Strings.hs  Terms.hs
rewriting/Autolib/Rewriting/Path/: Data.hs  Data.hs.drift
rewriting/Autolib/SRS/: Rule.hs
rewriting/Autolib/TES/: Apply.hs  Auto.hs  Binu.hs  Binu.hs.drift  Convert.hs  Cover.hs  Data.hs  Data.hs.drift  Draw.hs  Enum.hs  Generate.hs  Hull.hs  Identifier.hs  In.hs  Indetifier.hs  Inverse.hs  Linear.hs  OC.hs  Out.hs  Over.hs  Parsec.hs  Path.hs  Path.hs.drift  Position.hs  Raw.hs  Rule.hs  Sexp.hs  Symbol.hs  TRS.hs  Term.hs  Tex.hs  Type.hs  Unary.hs  Unify.hs  Xml.hs  Xml.hs.drift  example.tes
template/: autolib-template.cabal
tex/: autolib-tex.cabal
tex/Autolib/: LaTeX.hs  Tex.hs  ToTex.hs
todoc/: autolib-todoc.cabal
todoc/Autolib/: Informed.hs  Multilingual.hs  ToDoc.hs  Xml.hs  XmlRpc.hs
todoc/Autolib/Multilingual/: Doc.hs  Html.hs  Language.hs
todoc/Autolib/ToDoc/: Beside.hs  Class.hs  Derived.hs  Derived.hs.drift  Dutch.hs  Frame.hs  Manual.hs  Typeable.hs  Xml.hs  Xml.hs.drift
transport/: autolib-transport.cabal
transport/Data/Autolib/: Transport.hs
util/: autolib-util.cabal
util/Autolib/: Ana.hs  Depth.hs  FilterBound.hs  FilterSet.hs  Hash.hs  Letters.hs  Long.hs  Long.hs.drift  Prime.hs  Size.hs  Symbol.hs  Util.hs  Wort.hs  XmlRpc.hs
util/Autolib/Util/: BFS.hs  Bild.hs  Chmod.hs  Closure.hs  DPL.hs  DPL_Set.hs  Debug.hs  Doppelte.hs  Doppler.hs  Edit.hs  Factor.hs  Faktor.hs  Fix.hs  Generate.hs  Hamming.hs  Hide.hs  Mehrfache.hs  Perm.hs  RandoM.hs  Seed.hs  Size.hs  Sort.hs  Splits.hs  Teilfolgen.hs  ToDoc.hs  Uniq.hs  Wort.hs  Zufall.hs
(+19 files in other folders)
