Name:           autolib-algorithm
Version:        1.1
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends:  
        base >= 4 && < 4.3,
        autolib-data >= 1.1 && < 1.2
Synopsis:       basic algorithms
Exposed-modules:
        Autolib.Schichten
        Autolib.Fix
hs-source-dirs:	.
extensions: 
build-type: Simple



