Name:           autolib-cgi
Version:        1.1
License:        GPL
License-file:	gpl-2.0.txt
Author:         Johannes Waldmann
Maintainer:	Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/autolib/
Category:	Web
Synopsis:       Dynamic web page generation
description:	Dynamic web page generation.
	general installation instructions: <http://dfa.imn.htwk-leipzig.de/packages/lib/>
hs-source-dirs:	.
build-type: Simple
Cabal-version: >= 1.2
Library
    Build-depends:  base,bytestring,mtl,xhtml,happstack-server==0.2.1
    Exposed-modules: Autolib.CGI,Autolib.CGI.Widget,Autolib.CGI.Form,Autolib.CGI.Edit
                     Autolib.CGI.Local,Autolib.CGI.Container,Autolib.CGI.Store
Executable Menu_Test
    Build-depends:  base,happstack,bytestring,mtl,xhtml,happstack-server==0.2.1,happstack-state==0.2.1
    Main-is: Menu_Test.hs    



