Name:           autolib-cgi
Version:        1.2
License:        GPL
License-file:	gpl-2.0.txt
Author:         Johannes Waldmann
Maintainer:	Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/autolib/
Category:	Web
Synopsis:       Dynamic web page generation
description:	Dynamic web page generation.
	general installation instructions: <http://dfa.imn.htwk-leipzig.de/packages/lib/>
build-type: Simple
Cabal-version: >= 1.2

Library
    Build-depends:  
            base >= 4 && < 4.4,
            bytestring >= 0.9 && < 0.10,
            mtl,
            xhtml >= 3000.2 && < 3000.3,
            utf8-string >= 0.3 && < 0.4,
            happstack-server >= 0.4 && < 0.6
    Exposed-modules: Autolib.CGI,Autolib.CGI.Widget,Autolib.CGI.Form,Autolib.CGI.Edit
                     Autolib.CGI.Local,Autolib.CGI.Container,Autolib.CGI.Store
Executable Menu_Test
    Build-depends:  
            base >= 4 && < 4.4,
            happstack >= 0.4 && < 0.6,
            bytestring >= 0.9 && < 0.10,
            mtl >= 1.1 && < 1.2,
            xhtml >= 3000.2 && < 3000.3,
            happstack-server >= 0.4 && < 0.6,
            happstack-state >= 0.4 && < 0.6
    Main-is: Menu_Test.hs    


