Name:           autolib-data
Version:        1.1
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends:  
        base >= 4 && < 4.3,
        containers >= 0.2 && < 0.4,
        autolib-todoc >= 1.1 && < 1.2,
        autolib-reader >= 1.1 && < 1.2
Synopsis:       wrapper for old Set and FiniteMap API 
Exposed-modules:
        Autolib.Set
        Autolib.Simple_Set
        Autolib.FiniteMap
        Autolib.Data.Map
hs-source-dirs:	.
extensions: 
build-type: Simple



