name:          autolib-derive
version:       1.0
license:       GPL
license-file:  gpl-2.0.txt
author:        Bertram Felgenhauer
maintainer:    Bertram Felgenhauer
homepage:
category:      Development
synopsis:      Automatically derive autolib's ToDoc and Reader.
description:
    Automatically derive instances for autolib's ToDoc and Reader classes.
    .
    Synopsis:
    .
    @
    import Data.Derive.ToDoc
    import Data.Derive.Reader
    .
    $(derive makeToDoc ''Type3])
    $(derives [makeToDoc, makeReader] [''Type1, ''Type2])
    @
build-type:    Simple
cabal-version: >= 1.6

extra-source-files:
    README
    generate
    examples/*.hs

library
    build-depends:
        base >= 3 && < 3.1,
        derive >= 2 && < 2.1
    exposed-modules:
-- GENERATED START
        Data.Derive.Reader
        Data.Derive.ToDoc
-- GENERATED STOP
