name:          autolib-derive
version:       1.1
license:       GPL
license-file:  gpl-2.0.txt
author:        Bertram Felgenhauer
maintainer:    Bertram Felgenhauer
homepage:
category:      Development
synopsis:      Automatically derive autolib's ToDoc and Reader.
description:
    Automatically derive instances for autolib's ToDoc, Reader and
    ToTransport classes.
    .
    Synopsis:
    .
    @
    import Data.Derive.ToDoc
    import Data.Derive.Reader
    .
    $(derives [makeToDoc, makeReader] [''Type1, ''Type2])
    @
build-type:    Simple
cabal-version: >= 1.6

extra-source-files:
    README
    generate
    examples/*.hs

library
    build-depends:
            base >= 4 && < 4.3,
            derive >= 2.3 && < 2.4
    exposed-modules:
-- GENERATED START
        Data.Derive.ToTransport
        Data.Derive.Reader
        Data.Derive.ToDoc
-- GENERATED STOP
