Name:           autolib-dot
Version:        1.1
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann, Bertram Felgenhauer
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends:  
        base >= 4 && < 4.4,
        random >= 1.0 && < 1.1,
        process >= 1.0 && < 1.1,
        containers >= 0.2 && < 0.4,
        directory >= 1.0 && < 1.1,
        parsec >= 3 && < 4,
        bytestring >= 0.9 && < 0.10,
        autolib-todoc >= 1.1 && < 1.2,
        autolib-reader >= 1.1 && < 1.2,
        autolib-data >= 1.1 && < 1.2,
        autolib-util >= 1.1 && < 1.2,
        autolib-output >= 1.1 && < 1.2,
        autolib-reporter >= 1.1 && < 1.2
Synopsis:       interface to dot (graphviz language)
Exposed-modules:
        Autolib.Boxing
        Autolib.Boxing.Position
        Autolib.Boxing.Class
        Autolib.Boxing.Ops
        Autolib.Dot
        Autolib.Dot.Attribute
        Autolib.Dot.Dot
        Autolib.Dot.Dotty
        Autolib.Dot.Edge
        Autolib.Dot.Graph
        Autolib.Dot.Node
        Autolib.Dot.Parsec
        Autolib.Local
hs-source-dirs:	.
extensions: 
cabal-version: >= 1.6
build-type: Custom



