Name:           autolib-dot
Version:        1.1
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann, Bertram Felgenhauer
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends: base == 4.* , random , process , containers ,
               directory , parsec == 3.* , bytestring , autolib-todoc ,
               autolib-reader , autolib-data , autolib-util , autolib-output ,
               autolib-reporter
Synopsis:       interface to dot (graphviz language)
Exposed-modules:
        Autolib.Boxing
        Autolib.Boxing.Position
        Autolib.Boxing.Class
        Autolib.Boxing.Ops
        Autolib.Dot
        Autolib.Dot.Attribute
        Autolib.Dot.Dot
        Autolib.Dot.Dotty
        Autolib.Dot.Edge
        Autolib.Dot.Graph
        Autolib.Dot.Node
        Autolib.Dot.Parsec
        Autolib.Local
hs-source-dirs:	.
extensions: 
cabal-version: >= 1.6
build-type: Custom


