Name:           autolib-exp
Version:        1.1
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends:  
        base >= 4 && < 4.3,
        parsec >= 2 && < 3,
        autolib-todoc >= 1.1 && < 1.2,
        autolib-reader >= 1.1 && < 1.2,
        autolib-reporter >= 1.1 && < 1.2,
        autolib-data >= 1.1 && < 1.2,
        autolib-util >= 1.1 && < 1.2,
        autolib-fa >= 1.1 && < 1.2
Synopsis:       regular expressions
Exposed-modules:
        Autolib.Exp
        Autolib.Exp.Einfach
        Autolib.Exp.Env
        Autolib.Exp.Example
        Autolib.Exp.Inter
        Autolib.Exp.MyTokens
        Autolib.Exp.Print
        Autolib.Exp.Read
        Autolib.Exp.Reverse
        Autolib.Exp.Sanity
        Autolib.Exp.Some
        Autolib.Exp.Syntax
        Autolib.Exp.Type
	Autolib.NFA.Compact
hs-source-dirs:	.
extensions: DeriveDataTypeable, FlexibleContexts, UndecidableInstances, Rank2Types
build-type: Simple



