Name:           autolib-fta
Version:        1.1
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends:  
        base >= 4 && < 4.4,
        mtl >= 1.1 && < 1.2,
        array >= 0.2 && < 0.4,
        autolib-todoc >= 1.1 && < 1.2,
        autolib-reader >= 1.1 && < 1.2,
        autolib-algorithm >= 1.1 && < 1.2,
        autolib-relation >= 1.1 && < 1.2,
        autolib-util >= 1.1 && < 1.2,
        autolib-rewriting >= 1.1 && < 1.2,
        autolib-data >= 1.1 && < 1.2,
        autolib-dot >= 1.1 && < 1.2,
        autolib-fa >= 1.1 && < 1.2
Synopsis:       finite tree automata
Exposed-modules:
        Autolib.NFTA
        Autolib.NFTA.Basic
        Autolib.NFTA.Compact
        Autolib.NFTA.Complement
        Autolib.NFTA.Cross
        Autolib.NFTA.Det
        Autolib.NFTA.Dot
        Autolib.NFTA.Epsilon
        Autolib.NFTA.Insert
        Autolib.NFTA.Normalize
        Autolib.NFTA.Ops
        Autolib.NFTA.Path
        Autolib.NFTA.Shortest
        Autolib.NFTA.Trim
        Autolib.NFTA.Type
	Autolib.Rewriting.Automaton
hs-source-dirs:	.
extensions: MultiParamTypeClasses, FlexibleContexts, FlexibleInstances, UndecidableInstances, ScopedTypeVariables
build-type: Simple



