Name:           autolib-genetic
Version:        1.1
License:        GPL
Author:         Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Build-Depends:  base==4.*, autolib-todoc, autolib-data, autolib-util
Synopsis:       evolutionary algorithms
Exposed-modules:
        Autolib.Genetic
        Autolib.Genetic.Config
        Autolib.Genetic.Central
        Autolib.Genetic.Operator
hs-source-dirs:	.
extensions: FlexibleContexts, UndecidableInstances, FlexibleInstances, IncoherentInstances
build-type: Simple



