Name:           autolib-genetic
Version:        1.2
License:        GPL
Author:         Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Build-Depends:  
        base >= 4 && < 4.4,
        autolib-todoc >= 1.1 && < 1.2,
        autolib-data >= 1.1 && < 1.2,
        autolib-util >= 1.1 && < 1.2
Synopsis:       evolutionary algorithms
Exposed-modules:
        Autolib.Genetic
        Autolib.Genetic.Config
        Autolib.Genetic.Central
        Autolib.Genetic.Operator
hs-source-dirs:	.
extensions: FlexibleContexts, UndecidableInstances, FlexibleInstances, IncoherentInstances
build-type: Simple



