Name:           autolib-graph
Version:        1.1
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends:  
        base >= 4 && < 4.4,
        array >= 0.2 && < 0.4,
        containers,
        random >= 1.0 && < 1.1,
        process >= 1.0 && < 1.1,
        autolib-transport >= 1 && < 1.1,
        autolib-reader >= 1.1 && < 1.2,
        autolib-todoc >= 1.1 && < 1.2,
        autolib-data >= 1.1 && < 1.2,
        autolib-dot >= 1.1 && < 1.2,
        autolib-util >= 1.1 && < 1.2
Synopsis:       graphs
Exposed-modules:
        Autolib.Number
        Autolib.Iso
        Autolib.Graph
        Autolib.Graph.Adj
        Autolib.Graph.Basic
        Autolib.Graph.Beispiele
        Autolib.Graph.Brinkmann
        Autolib.Graph.Display
        Autolib.Graph.Gallery
        Autolib.Graph.Generate
        Autolib.Graph.Graph
        Autolib.Graph.Incidence
        Autolib.Graph.Isomorph
        Autolib.Graph.Kante
        Autolib.Graph.Kneser
        Autolib.Graph.Knight
        Autolib.Graph.Labeling
        Autolib.Graph.Layout
        Autolib.Graph.Line
        Autolib.Graph.Mycielski
        Autolib.Graph.Ops
        Autolib.Graph.Reading.Type
        Autolib.Graph.SpanTree
        Autolib.Graph.Type
        Autolib.Graph.Util
        Autolib.Graph.Valid
        Autolib.GVKnoten.Layout
        Autolib.GVKnoten.Parser
        Autolib.GVKnoten.Type
hs-source-dirs:	.
extensions: MultiParamTypeClasses, FunctionalDependencies, DeriveDataTypeable, FlexibleContexts, UndecidableInstances, FlexibleInstances
build-type: Simple



