Name:           autolib-output
Version:        1.0
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends:  base==4.*, bytestring==0.9.*, autolib-todoc
Synopsis:       abstract output
Exposed-modules:
        Autolib.Output
        Autolib.Output.Basic
        Autolib.Output.XHtml
        Autolib.Output.Type
hs-source-dirs:	.
extensions: 
build-type: Simple



