Name:           autolib-reader
Version:        1.1
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends: base == 4.* , parsec == 3.* , autolib-todoc ,
               autolib-derive
Synopsis:       parsing
Exposed-modules:
	Autolib.Reader
	Autolib.Reader.Basic
	Autolib.Reader.Class
	Autolib.Reader.Derived
	Autolib.Reader.Instances
	Autolib.Reader.Link
hs-source-dirs:	.
ghc-options: -fglasgow-exts
extensions: IncoherentInstances
build-type: Simple


