Name:           autolib-relation
Version:        1.1
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends:  
        base >= 4 && < 4.3,
        autolib-algorithm >= 1.1 && < 1.2,
        autolib-data >= 1.1 && < 1.2,
        autolib-reader >= 1.1 && < 1.2,
        autolib-todoc >= 1.1 && < 1.2,
        autolib-util >= 1.1 && < 1.2
Synopsis:       relations
Exposed-modules:
        Autolib.Relation
        Autolib.Relation.Basic
        Autolib.Relation.Ops
        Autolib.Relation.Type
	Autolib.Partial
hs-source-dirs:	.
extensions: FlexibleContexts, UndecidableInstances, FlexibleInstances, IncoherentInstances
build-type: Simple



