Name:           autolib-relation
Version:        1.1
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends: base == 4.* , autolib-algorithm , autolib-data ,
               autolib-reader , autolib-todoc , autolib-util
Synopsis:       relations
Exposed-modules:
        Autolib.Relation
        Autolib.Relation.Basic
        Autolib.Relation.Ops
        Autolib.Relation.Type
	Autolib.Partial
hs-source-dirs:	.
extensions: FlexibleContexts, UndecidableInstances, FlexibleInstances, IncoherentInstances
build-type: Simple


