Name:           autolib-reporter
Version:        1.0
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends:  base==4.*, parsec==2.*, containers, mtl, random, 
		autolib-output, autolib-todoc, autolib-reader, autolib-data
Synopsis:       reporting 
Exposed-modules:
        Autolib.Reporter
        Autolib.Reporter.Boolean
        Autolib.Reporter.Boolean.Data
        Autolib.Reporter.Boolean.Eval
        Autolib.Reporter.Boolean.Reader
        Autolib.Reporter.Boolean.ToDoc
        Autolib.Reporter.Boolean.Type
        Autolib.Reporter.Checker
        Autolib.Reporter.Iterator
        Autolib.Reporter.Parallel
        Autolib.Reporter.Proof
        Autolib.Reporter.Set
        Autolib.Reporter.Stream
        Autolib.Reporter.Type
hs-source-dirs:	.
extensions: TypeSynonymInstances
build-type: Simple



