Name:           autolib-reporter
Version:        1.1
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends:  
        base >= 4 && < 4.4,
        parsec >= 2 && < 4,
        containers >= 0.2 && < 0.4,
        mtl,
        random >= 1.0 && < 1.1,
        autolib-output >= 1.1 && < 1.2,
        autolib-todoc >= 1.1 && < 1.2,
        autolib-reader >= 1.1 && < 1.2,
        autolib-data >= 1.1 && < 1.2
Synopsis:       reporting 
Exposed-modules:
        Autolib.Timer
        Autolib.Reporter
        Autolib.Reporter.Boolean
        Autolib.Reporter.Boolean.Data
        Autolib.Reporter.Boolean.Eval
        Autolib.Reporter.Boolean.Reader
        Autolib.Reporter.Boolean.ToDoc
        Autolib.Reporter.Boolean.Type
        Autolib.Reporter.Checker
        Autolib.Reporter.Iterator
        Autolib.Reporter.Parallel
        Autolib.Reporter.Proof
        Autolib.Reporter.Set
        Autolib.Reporter.Stream
        Autolib.Reporter.Type
hs-source-dirs:	.
ghc-options: -fglasgow-exts
extensions: TypeSynonymInstances
build-type: Simple



