Name:           autolib-rewriting
Version:        1.0
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends:  base==4.*, containers, mtl, random, parsec==2.*,
		autolib-util, autolib-data, autolib-reader, autolib-todoc, autolib-tex, autolib-relation, autolib-fa,
		autolib-reporter
Synopsis:       string and term rewriting 
Exposed-modules:
       Autolib.Rewriting
        Autolib.Rewriting.Address
        Autolib.Rewriting.Path
        Autolib.Rewriting.Path.Data
        Autolib.Rewriting.Strings
        Autolib.Rewriting.Terms
       Autolib.SRS
        Autolib.SRS.Rule
       Autolib.Virtualist
       Autolib.Choose
       Autolib.Pick
         Autolib.TES
        Autolib.TES.Apply
        Autolib.TES.Binu
        Autolib.TES.Data
        Autolib.TES.Draw
        Autolib.TES.Enum
        Autolib.TES.Hull
        Autolib.TES.Identifier
        Autolib.TES.In
        Autolib.TES.Inverse
        Autolib.TES.Linear
        Autolib.TES.OC
        Autolib.TES.Out
        Autolib.TES.Over
        Autolib.TES.Over.Lap
        Autolib.TES.Parsec
        Autolib.TES.Position
        Autolib.TES.Raw
        Autolib.TES.Rule
        Autolib.TES.Sexp
        Autolib.TES.Term
        Autolib.TES.Type
        Autolib.TES.Unify
        Autolib.TES.Xml
hs-source-dirs:	.
extensions: DeriveDataTypeable, MultiParamTypeClasses, FlexibleInstances, FlexibleContexts, UndecidableInstances, FunctionalDependencies, OverlappingInstances
ghc-options: -fglasgow-exts
build-type: Simple



