Name:           autolib-tex
Version:        1.0
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends:  base==4.*, autolib-todoc
Synopsis:       generic latex interface
Exposed-modules:
        Autolib.Tex
        Autolib.ToTex
hs-source-dirs:	.
extensions: FlexibleInstances, UndecidableInstances
build-type: Simple



