Name:           autolib-todoc
Version:        1.1
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends:  
        base >= 4 && < 4.4,
        pretty >= 1.0 && < 1.1,
        containers >= 0.2 && < 0.4,
        xhtml >= 3000.2 && < 3000.3,
        autolib-derive >= 1.1 && < 1.2
Synopsis:       formatting
Exposed-modules:
	Autolib.Informed
	Autolib.ToDoc
	Autolib.Multilingual
	Autolib.Multilingual.Doc
	Autolib.Multilingual.Html
	Autolib.ToDoc.Beside
	Autolib.ToDoc.Class
	Autolib.ToDoc.Derived
	Autolib.ToDoc.Dutch
	Autolib.ToDoc.Frame
	Autolib.ToDoc.Manual
	Autolib.ToDoc.Typeable
	Autolib.ToDoc.Xml
	Autolib.Xml
hs-source-dirs:	.
ghc-options: -fglasgow-exts
extensions: IncoherentInstances
build-type: Simple



