name:          autolib-transport
version:       1
license:       GPL
license-file:  gpl-2.0.txt
author:        Bertram Felgenhauer
maintainer:    Bertram Felgenhauer
homepage:
category:      Development
synopsis:      Abstract data representation for transport over various protocols.
description:
    Abstract data representation for transport over various protocols.
    .
    Currently, JSON and XML-RPC are supported. The design is based on
    the features of these two protocols and the requirements of the
    autolib/autotool packages.
build-type:    Simple
cabal-version: >= 1.6

extra-source-files:

library
    build-depends:
            base >= 4 && < 4.3,
            containers >= 0.2 && < 0.4,
            haxr >= 3000.5 && < 3000.6,
            json >= 0.4 && < 0.5,
            bytestring >= 0.9 && < 0.10,
            base64-string >= 0.1 && < 0.2,
            autolib-derive >= 1.1 && < 1.2,
            utf8-string >= 0.3 && < 0.4
    exposed-modules:
        Data.Autolib.Transport
        Data.Autolib.Transport.JSON
        Data.Autolib.Transport.HaXR
    other-modules:
        Data.Autolib.Transport.Class
        Data.Autolib.Transport.Atom
        Data.Autolib.Transport.Error
